test: check my code with (checkstyle, pmd, spotbugs, jacoco)